--- a/archives.html
+++ b/archives.html
@@ -74,6 +74,8 @@
         <h1>Archives for Andrew Koebbe</h1>
 
         <dl>
+                <dt>July 29, 2014</dt>
+                <dd><a href='http://blog.andrewkoebbe.com/posts/2014/07/yes-virginia-att-is-throttling-your-netflix/'>Yes Virginia, <span class="caps">AT</span>&amp;T is Throttling your&nbsp;Netflix</a></dd>
                 <dt>June 29, 2014</dt>
                 <dd><a href='http://blog.andrewkoebbe.com/posts/2014/06/installing-crashplan-headless-on-a-readynas-102/'>Installing Crashplan headless on a ReadyNAS&nbsp;102</a></dd>
                 <dt>June 09, 2014</dt>
@@ -111,8 +113,8 @@
                 <li class="list-group-item"><a href="http://blog.andrewkoebbe.com/"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
                     <ul class="list-group" id="tags">
                         <li class="list-group-item tag-4">
-                            <a href="http://blog.andrewkoebbe.com/tag/oatmeal/">
-                                oatmeal
+                            <a href="http://blog.andrewkoebbe.com/tag/recipe/">
+                                recipe
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
@@ -121,8 +123,8 @@
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="http://blog.andrewkoebbe.com/tag/recipe/">
-                                recipe
+                            <a href="http://blog.andrewkoebbe.com/tag/oatmeal/">
+                                oatmeal
                             </a>
                         </li>
                     </ul>
