--- a/tags.html
+++ b/tags.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Andrew Koebbe, Just another developer with a blog.">
 
-        <link rel="alternate"  href="http://localhost:8000/feeds/all.atom.xml" type="application/atom+xml" title="Andrew Koebbe Full Atom Feed"/>
-        <link rel="alternate" href="http://localhost:8000/atom.xml" type="application/atom+xml" title="Andrew Koebbe Atom Feed"/>
-        <link rel="alternate" href="http://localhost:8000/rss.xml" type="application/rss+xml" title="Andrew Koebbe RSS Feed"/>
+        <link rel="alternate"  href="http://blog.andrewkoebbe.com/feeds/all.atom.xml" type="application/atom+xml" title="Andrew Koebbe Full Atom Feed"/>
+        <link rel="alternate" href="http://blog.andrewkoebbe.com/atom.xml" type="application/atom+xml" title="Andrew Koebbe Atom Feed"/>
+        <link rel="alternate" href="http://blog.andrewkoebbe.com/rss.xml" type="application/rss+xml" title="Andrew Koebbe RSS Feed"/>
 
         <title>Andrew Koebbe - Tags</title>
 
@@ -15,7 +15,7 @@
 
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/pure/0.3.0/pure-min.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="http://localhost:8000/theme/css/pure.css">
+    <link rel="stylesheet" href="http://blog.andrewkoebbe.com/theme/css/pure.css">
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 </head>
@@ -28,9 +28,9 @@
                     <header class="header">
                         <hgroup>
                             <img class="avatar" src="/images/headshot.jpg">
-                            <h1 class="brand-main"><a href="http://localhost:8000">Andrew Koebbe</a></h1>
+                            <h1 class="brand-main"><a href="http://blog.andrewkoebbe.com">Andrew Koebbe</a></h1>
                             <p class="tagline">Just another developer with a blog.</p>
-                                <p class="links"><a href="http://localhost:8000/resume">Resume</a></p>
+                                <p class="links"><a href="http://blog.andrewkoebbe.com/resume">Resume</a></p>
                                 <p class="social">
                                     <a href="https://www.linkedin.com/profile/view?id=14776117">
                                         <i class="fa fa-linkedin fa-3x"></i>
@@ -47,17 +47,17 @@
                 </div>
             </div>
         </div>
-    <h1>Tags for Andrew Koebbe</h1>        <li><a href="http://localhost:8000/tag/breakfast/">breakfast</a> (1)</li>
-        <li><a href="http://localhost:8000/tag/compass/">compass</a> (3)</li>
-        <li><a href="http://localhost:8000/tag/css/">css</a> (3)</li>
-        <li><a href="http://localhost:8000/tag/hair-style/">hair style</a> (1)</li>
-        <li><a href="http://localhost:8000/tag/lotion/">lotion</a> (1)</li>
-        <li><a href="http://localhost:8000/tag/oatmeal/">oatmeal</a> (1)</li>
-        <li><a href="http://localhost:8000/tag/personal-care/">personal care</a> (2)</li>
-        <li><a href="http://localhost:8000/tag/recipe/">recipe</a> (3)</li>
-        <li><a href="http://localhost:8000/tag/sass/">sass</a> (3)</li>
-        <li><a href="http://localhost:8000/tag/skin-care/">skin care</a> (1)</li>
-        <li><a href="http://localhost:8000/tag/susy/">susy</a> (3)</li>
+    <h1>Tags for Andrew Koebbe</h1>        <li><a href="http://blog.andrewkoebbe.com/tag/breakfast/">breakfast</a> (1)</li>
+        <li><a href="http://blog.andrewkoebbe.com/tag/compass/">compass</a> (3)</li>
+        <li><a href="http://blog.andrewkoebbe.com/tag/css/">css</a> (3)</li>
+        <li><a href="http://blog.andrewkoebbe.com/tag/hair-style/">hair style</a> (1)</li>
+        <li><a href="http://blog.andrewkoebbe.com/tag/lotion/">lotion</a> (1)</li>
+        <li><a href="http://blog.andrewkoebbe.com/tag/oatmeal/">oatmeal</a> (1)</li>
+        <li><a href="http://blog.andrewkoebbe.com/tag/personal-care/">personal care</a> (2)</li>
+        <li><a href="http://blog.andrewkoebbe.com/tag/recipe/">recipe</a> (3)</li>
+        <li><a href="http://blog.andrewkoebbe.com/tag/sass/">sass</a> (3)</li>
+        <li><a href="http://blog.andrewkoebbe.com/tag/skin-care/">skin care</a> (1)</li>
+        <li><a href="http://blog.andrewkoebbe.com/tag/susy/">susy</a> (3)</li>
     </div>
     <script>
         var $top = $('.go-top');
