--- a/categories.html
+++ b/categories.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Andrew Koebbe, Just another developer with a blog.">
 
-        <link rel="alternate"  href="http://localhost:8000/feeds/all.atom.xml" type="application/atom+xml" title="Andrew Koebbe Full Atom Feed"/>
-        <link rel="alternate" href="http://localhost:8000/atom.xml" type="application/atom+xml" title="Andrew Koebbe Atom Feed"/>
-        <link rel="alternate" href="http://localhost:8000/rss.xml" type="application/rss+xml" title="Andrew Koebbe RSS Feed"/>
+        <link rel="alternate"  href="http://blog.andrewkoebbe.com/feeds/all.atom.xml" type="application/atom+xml" title="Andrew Koebbe Full Atom Feed"/>
+        <link rel="alternate" href="http://blog.andrewkoebbe.com/atom.xml" type="application/atom+xml" title="Andrew Koebbe Atom Feed"/>
+        <link rel="alternate" href="http://blog.andrewkoebbe.com/rss.xml" type="application/rss+xml" title="Andrew Koebbe RSS Feed"/>
 
         <title>Andrew Koebbe // Just another developer with a blog.</title>
 
@@ -15,7 +15,7 @@
 
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/pure/0.3.0/pure-min.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="http://localhost:8000/theme/css/pure.css">
+    <link rel="stylesheet" href="http://blog.andrewkoebbe.com/theme/css/pure.css">
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 </head>
@@ -28,9 +28,9 @@
                     <header class="header">
                         <hgroup>
                             <img class="avatar" src="/images/headshot.jpg">
-                            <h1 class="brand-main"><a href="http://localhost:8000">Andrew Koebbe</a></h1>
+                            <h1 class="brand-main"><a href="http://blog.andrewkoebbe.com">Andrew Koebbe</a></h1>
                             <p class="tagline">Just another developer with a blog.</p>
-                                <p class="links"><a href="http://localhost:8000/resume">Resume</a></p>
+                                <p class="links"><a href="http://blog.andrewkoebbe.com/resume">Resume</a></p>
                                 <p class="social">
                                     <a href="https://www.linkedin.com/profile/view?id=14776117">
                                         <i class="fa fa-linkedin fa-3x"></i>
@@ -48,9 +48,9 @@
             </div>
         </div>
 <ul>
-    <li><a href="http://localhost:8000/category/development">Development</a></li>
-    <li><a href="http://localhost:8000/category/diyrecipes">DIY/Recipes</a></li>
-    <li><a href="http://localhost:8000/category/technology">Technology</a></li>
+    <li><a href="http://blog.andrewkoebbe.com/category/development">Development</a></li>
+    <li><a href="http://blog.andrewkoebbe.com/category/diyrecipes">DIY/Recipes</a></li>
+    <li><a href="http://blog.andrewkoebbe.com/category/technology">Technology</a></li>
 </ul>
     </div>
     <script>
